force-app/src/objects/cpm__Bank_Feed_Authorization__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Authorization_Date__c</fullName>
        <description>The date this authorization was given.</description>
        <label>Authorization Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__Authorization_Reference__c</fullName>
        <description>The reference of the authorization. Used to communicate about this authorization with the AISP.</description>
        <label>Authorization Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Consent_Id__c</fullName>
        <description>The id of the consent given by the user. Used to communicate about the agreement with the AISP.</description>
        <label>Consent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Expiry_Date__c</fullName>
        <description>The date this authorization expires.</description>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__Institution_Id__c</fullName>
        <description>The Id of the institution as provided by the AISP.</description>
        <label>Institution Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Institution_Name__c</fullName>
        <description>The name of the institution as provided by the AISP.</description>
        <label>Institution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Scope__c</fullName>
        <description>The access scope this authorization provides. E.g. Transactions, Balances</description>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <description>The status of the authorization.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Valid_for__c</fullName>
        <description>The amount of days this authorization is valid for. Provided by the AISP, used to calculate the Expiry_Date__c.</description>
        <label>Valid for</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Feed Authorization</label>
    <nameField>
        <label>Bank Feed Authorization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Feed Authorizations</pluralLabel>
    <recordTypes>
        <fullName>cpm__GoCardless</fullName>
        <active>true</active>
        <description>RecordType to be used with GoCardless AISP</description>
        <label>GoCardless</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>